--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style.css?v=7">
+    <link rel="stylesheet" href="css/style.css?v=8">
 
     <!-- Icon -->
     <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css"> <!-- Font Awesome Icon 4.7.0 -->
@@ -16,9 +16,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/svg-inject.js"></script>
     <script src="js/js-cookie.js"></script>
-    <script src="js/main.js?v=7"></script>
+    <script src="js/main.js?v=8"></script>
 </head>
-<body>
+<body class="open">
 
     <div class="body-content max-w1280 margin-auto overflow-hidden">
         <!-- Menu -->
@@ -338,7 +338,7 @@
                 </div>
                 <img img-arc="1" class="img-arc" src="assets/arcs/arc 15.svg"/>
             </section>
-            <section class="section" data-clip-id="3" style="background-image: url(assets/bg/pattern_bg3.jpg);">
+            <!-- <section class="section" data-clip-id="3" style="background-image: url(assets/bg/pattern_bg3.jpg);">
                 <div class="content">
                     <div class="full-width align-in-center pt-100 pb-120">
                         <div class="_75-width flex-column z-index-1 justify-center sm_90-width sm_align-center sm_mt_60">
@@ -359,7 +359,7 @@
                     </div>
                 </div>
                 <img img-arc="2" class="img-arc" src="assets/arcs/arc_2.svg"/>
-            </section>
+            </section> -->
             <!-- <section class="section" data-clip-id="4" style="background-image: url(assets/bg/pattern_bg4.jpg);">
                 <div class="content">
                 <div style="padding: 0 40px;padding-top: 50px">
