--- a/pages/become-investor/index.html
+++ b/pages/become-investor/index.html
@@ -7,7 +7,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/style.css?v=7">
+    <link rel="stylesheet" href="../../css/style.css">
 
     <!-- Icon -->
     <link rel="stylesheet" href="../../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../../js/svg-inject.js"></script>
     <script src="../../js/js-cookie.js"></script>
-    <script src="../../js/main.js?v=7"></script>
+    <script src="../../js/main.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <style>
@@ -144,7 +144,7 @@
                         <li class="distributor-investor-menu display-none"><a href="../financial-updates.html">Financial
                                 Updates</a></li>
                         <li><a href="../become-distributor/">Become a distributor</a></li>
-                        <li><a href="../become-investor/">Become an investor</a></li>
+                        <li class="active"><a href="../become-investor/">Become an investor</a></li>
                         
                     </ul>
                 </ul>
@@ -455,7 +455,7 @@
                                     </div>
                                     <div class="d-flex full-width form-responsive">
                                         <div class="input-text" required>
-                                            <label label="(Must be filled in)">Size of possible investment</label>
+                                            <label label="(Must be filled in) This is just suggestion, and not binding in any way">Size of possible investment</label>
                                             <div class="currency-field" prefix="US$">
                                                 <input class="format-currency" type="text" id="investment" parent=".input-text" placeholder="0">
                                             </div>
