--- a/pages/soft-shelled-mudcrabs/index.html
+++ b/pages/soft-shelled-mudcrabs/index.html
@@ -7,7 +7,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/style.css?v=7">
+    <link rel="stylesheet" href="../../css/style.css?v=12">
 
     <!-- Icon -->
     <link rel="stylesheet" href="../../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../../js/svg-inject.js"></script>
     <script src="../../js/js-cookie.js"></script>
-    <script src="../../js/main.js?v=7"></script>
+    <script src="../../js/main.js??v=12"></script>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                 <ul>
                     <ul class="menu">
                         <!-- <li class="menu-dropdown"><a href="">Soft-shelled mudcrabs</a></li> -->
-                        <li><a href="">Soft-shelled mudcrabs</a></li>
+                        <li class="active"><a href="">Soft-shelled mudcrabs</a></li>
                         <li class="sub-menu display-block">
                             <ul>
                                 <li id="frozen-whole"><a class="popup-page-url" parent-id="frozen-whole"
