--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -7,7 +7,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/style.css?v=7">
+    <link rel="stylesheet" href="../../css/style.css">
 
     <!-- Icon -->
     <link rel="stylesheet" href="../../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../../js/svg-inject.js"></script>
     <script src="../../js/js-cookie.js"></script>
-    <script src="../../js/main.js?v=7"></script>
+    <script src="../../js/main.js?v=8"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                         <!-- <li class="menu-dropdown"><a href="">Soft-shelled mudcrabs</a></li> -->
                         <li><a href="../soft-shelled-mudcrabs/">Soft-shelled mudcrabs</a></li>
                         <li><a href="../hard-shelled-mudcrabs/">Hard-shelled mudcrabs</a></li>
-                        <li><a href="../information/">Information</a></li>
+                        <li class="active"><a href="../information/">Information</a></li>
                         <li><a href="../where-to-buy/">Where to buy</a></li>
                         <li><a href="../contact-us.html">Contact us</a></li>
                         <li class="distributor-investor-menu display-none"><a href="../updates.html">Updates</a></li>
